# sanitized-db-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/plans/: 2026-03-23-multi-transport-sse-support-design.md
sanitized_db_mcp/: allowlist.py  allowlist_generator.py  audit.py  cli.py  connection.py  errors.py  sanitizer.py  server.py  transport.py
sanitized_db_mcp/tests/: conftest.py  test_allowlist.py  test_allowlist_generator.py  test_bypass.py  test_pentest.py  test_sanitizer.py  test_transport.py
