[project]
name = "sanitized-db-mcp"
version = "0.1.0"
description = "Sanitizing MCP server for PII/PHI-safe database queries"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pglast>=6.0",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["sanitized_db_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
