[project]
name = "sanitized-db-mcp"
version = "0.2.0"
description = "MCP server that rewrites SQL to prevent PII/PHI exposure in AI agent queries"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "sql", "pii", "phi", "sanitization", "postgresql", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "pglast>=6.0",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/ruminaider/sanitized-db-mcp"
Repository = "https://github.com/ruminaider/sanitized-db-mcp"
Issues = "https://github.com/ruminaider/sanitized-db-mcp/issues"

[project.optional-dependencies]
sse = [
    "starlette>=0.36,<1.0",
    "uvicorn>=0.27",
    "sse-starlette>=1.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sanitized-db-mcp = "sanitized_db_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sanitized_db_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
